--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      nodejs: 14
+#   install:
+#     runtime-versions:
+#       nodejs: 14
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
